存档点 - 过程

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/sport.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>下一代wkyd！</title>
     <script src="./src/jquery.js"></script>
   </head>
   <body>
-    <!-- <div id="app"></div>
-    <script type="module" src="/src/main.js"></script> -->
     <div id="start"></div>
     <script type="module" src="/src/start.js"></script>
   </body>
