--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/sport.png">
+    <link rel="icon" href="/sport.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>下一代wkyd！</title>
     <script src="./src/jquery.js"></script>
