--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/sport.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>下一代wkyd！</title>
-    <script src="./src/jquery.js"></script>
+    <script src="/jquery.js"></script>
   </head>
   <body>
     <div id="start"></div>
